math-core/tests/snapshots/wiki_test__wiki143.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\left [ 0,1 \\right ) \\left \\langle \\psi \\right |"
---
<math>
    <mrow>
        <mo>[</mo>
        <mn>0,1</mn>
        <mo>)</mo>
    </mrow>
    <mrow>
        <mo>⟨</mo>
        <mi>ψ</mi>
        <mo>|</mo>
    </mrow>
</math>
