math-core/tests/snapshots/wiki_test__wiki149.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\uparrow \\big\\uparrow \\Big\\uparrow \\bigg\\uparrow \\Bigg\\uparrow \\dots \\Bigg\\Downarrow \\bigg\\Downarrow \\Big\\Downarrow \\big\\Downarrow \\Downarrow"
---
<math>
    <mo stretchy="false">↑</mo>
    <mo maxsize="1.2em" minsize="1.2em" symmetric="true">↑</mo>
    <mo maxsize="1.623em" minsize="1.623em" symmetric="true">↑</mo>
    <mo maxsize="2.047em" minsize="2.047em" symmetric="true">↑</mo>
    <mo maxsize="2.470em" minsize="2.470em" symmetric="true">↑</mo>
    <mrow>
        <mo>.</mo>
        <mo lspace="0" rspace="0">.</mo>
        <mo>.</mo>
    </mrow>
    <mo maxsize="2.470em" minsize="2.470em" symmetric="true">⇓</mo>
    <mo maxsize="2.047em" minsize="2.047em" symmetric="true">⇓</mo>
    <mo maxsize="1.623em" minsize="1.623em" symmetric="true">⇓</mo>
    <mo maxsize="1.2em" minsize="1.2em" symmetric="true">⇓</mo>
    <mo stretchy="false">⇓</mo>
</math>
