math-core/tests/snapshots/wiki_test__wiki150.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\updownarrow\\big\\updownarrow\\Big\\updownarrow \\bigg\\updownarrow \\Bigg\\updownarrow \\dots \\Bigg\\Updownarrow \\bigg\\Updownarrow \\Big \\Updownarrow \\big\\Updownarrow \\Updownarrow"
---
<math>
    <mo stretchy="false">↕</mo>
    <mo maxsize="1.2em" minsize="1.2em" stretchy="true" symmetric="true">↕</mo>
    <mo maxsize="1.623em" minsize="1.623em" stretchy="true" symmetric="true">↕</mo>
    <mo maxsize="2.047em" minsize="2.047em" stretchy="true" symmetric="true">↕</mo>
    <mo maxsize="2.470em" minsize="2.470em" stretchy="true" symmetric="true">↕</mo>
    <mo>…</mo>
    <mo maxsize="2.470em" minsize="2.470em" stretchy="true" symmetric="true">⇕</mo>
    <mo maxsize="2.047em" minsize="2.047em" stretchy="true" symmetric="true">⇕</mo>
    <mo maxsize="1.623em" minsize="1.623em" stretchy="true" symmetric="true">⇕</mo>
    <mo maxsize="1.2em" minsize="1.2em" stretchy="true" symmetric="true">⇕</mo>
    <mo stretchy="false">⇕</mo>
</math>
