math-core/tests/snapshots/wiki_test__wiki151.snap
---
source: math-core/tests/wiki_test.rs
expression: "/ \\big/ \\Big/ \\bigg/ \\Bigg/ \\dots \\Bigg\\backslash \\bigg\\backslash \\Big \\backslash \\big\\backslash \\backslash"
---
<math>
    <mi>/</mi>
    <mo maxsize="1.2em" minsize="1.2em" stretchy="true" symmetric="true">/</mo>
    <mo maxsize="1.623em" minsize="1.623em" stretchy="true" symmetric="true">/</mo>
    <mo maxsize="2.047em" minsize="2.047em" stretchy="true" symmetric="true">/</mo>
    <mo maxsize="2.470em" minsize="2.470em" stretchy="true" symmetric="true">/</mo>
    <mrow>
        <mo>.</mo>
        <mo lspace="0" rspace="0">.</mo>
        <mo>.</mo>
    </mrow>
    <mo maxsize="2.470em" minsize="2.470em" stretchy="true" symmetric="true">\</mo>
    <mo maxsize="2.047em" minsize="2.047em" stretchy="true" symmetric="true">\</mo>
    <mo maxsize="1.623em" minsize="1.623em" stretchy="true" symmetric="true">\</mo>
    <mo maxsize="1.2em" minsize="1.2em" stretchy="true" symmetric="true">\</mo>
    <mi>\</mi>
</math>
